--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,6 +1,6 @@
 source "https://rubygems.org"
 
-# gem "jekyll"
+gem "github-pages", group: :jekyll_plugins
 # gem "jekyll-theme-so-simple", :git => "https://github.com/mmistakes/so-simple-theme.git", :branch => "rebuild"
 gem "github-pages", group: :jekyll_plugins
 
